Добавил технологии в проекты

--- a/src/posts/projects/project-01-yoga.mdx
+++ b/src/posts/projects/project-01-yoga.mdx
@@ -2,8 +2,9 @@
 slug: namasteysha
 link: /projects/namasteysha/
 category: "projects"
-title: Namasteysha Yoga Home
-description: 100 балльный репетитор
+title: Йога дом
+description: Разработка mvp ленда для студии йоги
+task: Разработка mvp ленда для студии йоги
 publicData: Oct 2025
 pagesCount: 1
 siteLink: https://i.gromov.digital/
