--- a/src/posts/projects/project-02-leily-yoga-ru.mdx
+++ b/src/posts/projects/project-02-leily-yoga-ru.mdx
@@ -3,7 +3,8 @@ slug: leily-yoga-ru
 link: /projects/leily-yoga-ru/
 category: "projects"
 title: Лейла Йога Ru
-description: 100 балльный репетитор
+description: Лейла Йога Ru
+task: Разработка сайта мультиязычного сайта для инструктора йоги
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://demo.gromov.digital/leily-yoga-ru/
