--- a/src/posts/projects/project-02-leily-yoga.mdx
+++ b/src/posts/projects/project-02-leily-yoga.mdx
@@ -3,7 +3,8 @@ slug: leily-yoga
 link: /projects/leily-yoga/
 category: "projects"
 title: Leily yoga
-description: 100 балльный репетитор
+description: Leily yoga
+task: Разработка сайта мультиязычного сайта для инструктора йоги
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://demo.gromov.digital/leily-yoga/
