--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -3,7 +3,9 @@ slug: soa
 link: /projects/soa/
 category: "projects"
 title: Для А.Путина
-description: 100 балльный репетитор
+description: soa Для А.Путина
+task: Разработка сайта под ключ на конструкторе webflow
+
 publicData: Oct 2023
 pagesCount: 5
 siteLink: https://preview.webflow.com/preview/soabridge?preview=0d5e075160042af87f3bc3988c01e1c4&workflow=sitePreview
@@ -31,5 +33,5 @@ pages:
       - title: Дневник
       - layout: ../../assets/images/projects/project-02-soa/layout/0.png
 
-sortIdx: 30
+sortIdx: 4
 ---
