--- a/src/posts/projects/project-03-domznaniy.mdx
+++ b/src/posts/projects/project-03-domznaniy.mdx
@@ -3,7 +3,8 @@ slug: domznaniy
 link: /projects/domznaniy/
 category: "projects"
 title: Дом знаний
-description: 100 балльный репетитор
+description: Дом знаний
+task: Разработка сайта для онлайн школы (edtech)
 publicData: Oct 2025
 pagesCount: 1
 siteLink: https://demo.gromov.digital/domznaniy/
@@ -21,5 +22,5 @@ pages:
       - title: Главная
       - layout: ../../assets/images/projects/project-04-home-ed/layout/0.png
 
-sortIdx: 50
+sortIdx: 3
 ---
