--- a/src/posts/projects/project-03-topseller.mdx
+++ b/src/posts/projects/project-03-topseller.mdx
@@ -3,7 +3,8 @@ slug: topseller
 link: /projects/topseller/
 category: "projects"
 title: Topseller
-description: 100 балльный репетитор
+description: Topseller
+task: Разработка лендинга клуба селлеров.
 publicData: Oct 2025
 pagesCount: 5
 siteLink: https://demo.gromov.digital/topseller/
