--- a/src/posts/projects/project-09-openfactoring.mdx
+++ b/src/posts/projects/project-09-openfactoring.mdx
@@ -3,8 +3,9 @@ slug: openfactoring
 link: /projects/openfactoring/
 category: "projects"
 title: Факторинг Открытие
-description: 100 балльный репетитор
-publicData: Sep 11th 2021
+description: Факторинг Открытие
+task: Редизайн сайта и интеграцию с WordPress
+publicData: Sep 2021
 pagesCount: 22
 siteLink: https://demo.gromov.digital/factoring/sitemap/sitemap.html
 skills:
