--- a/src/posts/projects/project-10-rschip.mdx
+++ b/src/posts/projects/project-10-rschip.mdx
@@ -3,7 +3,8 @@ slug: rschip
 link: /projects/rschip/
 category: "projects"
 title: Rschip
-description: 100 балльный репетитор
+description: Rschip
+task: Редизайн сайта и интеграцию с WordPress
 publicData: Nov 2022
 pagesCount: 9
 siteLink: https://demo.gromov.digital/rschip/
