--- a/src/posts/projects/project-110-hristina-cosmetics.mdx
+++ b/src/posts/projects/project-110-hristina-cosmetics.mdx
@@ -3,7 +3,7 @@ slug: h-cosmetics
 link: /projects/h-cosmetics/
 category: "projects"
 title: Hristina-Cosmetics
-description: 100 балльный репетитор
+description: Hristina-Cosmetics
 publicData: Aug 2021
 pagesCount: 10
 siteLink: https://demo.gromov.digital/h-cosmetics/
