--- a/src/posts/projects/project-120-mark-landing-project.mdx
+++ b/src/posts/projects/project-120-mark-landing-project.mdx
@@ -3,7 +3,7 @@ slug: mark
 link: /projects/mark/
 category: "projects"
 title: Mark-Landing
-description: 100 балльный репетитор
+description: Mark-Landing
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/mark/
