--- a/src/posts/projects/project-130-rogersservices.mdx
+++ b/src/posts/projects/project-130-rogersservices.mdx
@@ -3,7 +3,7 @@ slug: rogersservices
 link: /projects/rogersservices/
 category: "projects"
 title: Rogers-services
-description: 100 балльный репетитор
+description: Rogers-services
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/rogersservices/
