--- a/src/posts/projects/project-131-interstitial.mdx
+++ b/src/posts/projects/project-131-interstitial.mdx
@@ -3,7 +3,7 @@ slug: rogersserviinterstitialces
 link: /projects/interstitial/
 category: "projects"
 title: Interstitial
-description: 100 балльный репетитор
+description: Interstitial
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/interstitial/
