--- a/src/posts/projects/project-140-wellbeing.mdx
+++ b/src/posts/projects/project-140-wellbeing.mdx
@@ -3,7 +3,7 @@ slug: wellbeing
 link: /projects/wellbeing/
 category: "projects"
 title: Wellbeing
-description: 100 балльный репетитор
+description: Wellbeing
 publicData: Mart 2021
 pagesCount: 8
 siteLink: https://demo.gromov.digital/wellbeing-ru/
