--- a/src/posts/projects/project-150-ityu.mdx
+++ b/src/posts/projects/project-150-ityu.mdx
@@ -3,7 +3,7 @@ slug: ityu
 link: /projects/ityu/
 category: "projects"
 title: ITYU
-description: 100 балльный репетитор
+description: ITYU
 publicData: Jul 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161661629/ITYU-Project
