--- a/src/posts/projects/project-160-starmap.mdx
+++ b/src/posts/projects/project-160-starmap.mdx
@@ -3,7 +3,7 @@ slug: starmap
 link: /projects/starmap/
 category: "projects"
 title: StarMap
-description: 100 балльный репетитор
+description: StarMap
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
