--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -3,7 +3,7 @@ slug: tachos
 link: /projects/tachos/
 category: "projects"
 title: Tachos
-description: 100 балльный репетитор
+description: Tachos
 publicData: Sep 2022
 pagesCount: 4
 siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
