--- a/src/posts/projects/project-190-dr-krisin.mdx
+++ b/src/posts/projects/project-190-dr-krisin.mdx
@@ -3,7 +3,7 @@ slug: krysin
 link: /projects/krysin/
 category: "projects"
 title: DR-Krisin
-description: 100 балльный репетитор
+description: DR-Krisin
 publicData: Sep 2021
 pagesCount: 5
 siteLink: https://www.behance.net/gallery/161661005/DR-Krisin-Project
