--- a/src/posts/projects/project-20-montetuning.mdx
+++ b/src/posts/projects/project-20-montetuning.mdx
@@ -3,7 +3,7 @@ slug: montetuning
 link: /projects/montetuning/
 category: "projects"
 title: Montetuning
-description: 100 балльный репетитор
+description: Montetuning
 publicData: Sep 2021
 pagesCount: 14
 siteLink: https://demo.gromov.digital/monte
