--- a/src/posts/projects/project-200-krutakov.mdx
+++ b/src/posts/projects/project-200-krutakov.mdx
@@ -3,7 +3,7 @@ slug: krutakov
 link: /projects/krutakov/
 category: "projects"
 title: Krutakov
-description: 100 балльный репетитор
+description: Krutakov
 publicData: Sep 2021
 pagesCount: 6
 siteLink: https://demo.gromov.digital/krutakov/
