--- a/src/posts/projects/project-210-autoshum.mdx
+++ b/src/posts/projects/project-210-autoshum.mdx
@@ -3,7 +3,7 @@ slug: autoshum
 link: /projects/autoshum/
 category: "projects"
 title: Автошум
-description: 100 балльный репетитор
+description: Автошум
 publicData: May 2021
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161603779/avtoshum-project
