--- a/src/posts/projects/project-230-wedding.mdx
+++ b/src/posts/projects/project-230-wedding.mdx
@@ -3,7 +3,7 @@ slug: wedding
 link: /projects/wedding/
 category: "projects"
 title: Wedding
-description: 100 балльный репетитор
+description: Wedding
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/wedding/
