--- a/src/posts/projects/project-240-yoga.mdx
+++ b/src/posts/projects/project-240-yoga.mdx
@@ -3,7 +3,7 @@ slug: yoga
 link: /projects/yoga/
 category: "projects"
 title: Yoga
-description: 100 балльный репетитор
+description: Yoga
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/yoga-ca/
