--- a/src/posts/projects/project-250-fitness.mdx
+++ b/src/posts/projects/project-250-fitness.mdx
@@ -3,7 +3,7 @@ slug: fitness
 link: /projects/fitness/
 category: "projects"
 title: Fitness
-description: 100 балльный репетитор
+description: Fitness
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/fitness/
