--- a/src/posts/projects/project-260-multi.mdx
+++ b/src/posts/projects/project-260-multi.mdx
@@ -3,7 +3,7 @@ slug: multi
 link: /projects/multi/
 category: "projects"
 title: Multi
-description: 100 балльный репетитор
+description: Multi
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/multipurpose/
