--- a/src/posts/projects/project-270-ebook.mdx
+++ b/src/posts/projects/project-270-ebook.mdx
@@ -3,7 +3,7 @@ slug: ebook
 link: /projects/ebook/
 category: "projects"
 title: Ebook
-description: 100 балльный репетитор
+description: Ebook
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/ebook/
