--- a/src/posts/projects/project-280-hospital.mdx
+++ b/src/posts/projects/project-280-hospital.mdx
@@ -3,7 +3,7 @@ slug: hospital
 link: /projects/ebook/
 category: "projects"
 title: hospital
-description: 100 балльный репетитор
+description: hospital
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/hospital/
