--- a/src/posts/projects/project-290-educational.mdx
+++ b/src/posts/projects/project-290-educational.mdx
@@ -3,7 +3,7 @@ slug: educational
 link: /projects/educational/
 category: "projects"
 title: Edication
-description: 100 балльный репетитор
+description: Edication
 publicData: Sep 2020
 pagesCount: 2
 siteLink: https://demo.gromov.digital/educational/
