--- a/src/posts/projects/project-30-temnay-faza.mdx
+++ b/src/posts/projects/project-30-temnay-faza.mdx
@@ -3,7 +3,7 @@ slug: tfaza
 link: /projects/tfaza/
 category: "projects"
 title: Темная Фаза
-description: 100 балльный репетитор
+description: Темная Фаза
 publicData: Apr 2021
 pagesCount: 11
 siteLink: https://demo.gromov.digital/tfaza/
