--- a/src/posts/projects/project-300-event.mdx
+++ b/src/posts/projects/project-300-event.mdx
@@ -3,7 +3,7 @@ slug: event
 link: /projects/event/
 category: "projects"
 title: Event
-description: 100 балльный репетитор
+description: Event
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/event/
