--- a/src/posts/projects/project-310-estate.mdx
+++ b/src/posts/projects/project-310-estate.mdx
@@ -3,7 +3,7 @@ slug: estate
 link: /projects/estate/
 category: "projects"
 title: Estate
-description: 100 балльный репетитор
+description: Estate
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/estate/
