--- a/src/posts/projects/project-340-ids.mdx
+++ b/src/posts/projects/project-340-ids.mdx
@@ -3,7 +3,7 @@ slug: ids
 link: /projects/ids/
 category: "projects"
 title: IdsMediad
-description: 100 балльный репетитор
+description: IdsMediad
 publicData: Sep 2018
 pagesCount: 14
 siteLink: https://www.behance.net/gallery/94520343/ids
