--- a/src/posts/projects/project-350-the-optical-shop.mdx
+++ b/src/posts/projects/project-350-the-optical-shop.mdx
@@ -3,7 +3,7 @@ slug: the-optical-shop
 link: /projects/the-optical-shop/
 category: "projects"
 title: The-optical-shop
-description: 100 балльный репетитор
+description: The-optical-shop
 publicData: Sep 2018
 pagesCount: 8
 siteLink: https://www.behance.net/gallery/94513881/Theopticalshop
