--- a/src/posts/projects/project-370-vr-jazz.mdx
+++ b/src/posts/projects/project-370-vr-jazz.mdx
@@ -3,7 +3,7 @@ slug: vr-jazz
 link: /projects/vr-jazz/
 category: "projects"
 title: Vr-jazz
-description: 100 балльный репетитор
+description: Vr-jazz
 publicData: Sep 2018
 pagesCount: 8
 siteLink: https://www.behance.net/gallery/69706817/razrabotkaveb-dizajnverstkaintegracijavsego-sajta-VR
