--- a/src/posts/projects/project-380-fininvest.mdx
+++ b/src/posts/projects/project-380-fininvest.mdx
@@ -3,7 +3,7 @@ slug: fininvest
 link: /projects/fininvest/
 category: "projects"
 title: fininvest
-description: 100 балльный репетитор
+description: fininvest
 publicData: Jan 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/fininvest/
