--- a/src/posts/projects/project-390-confidence.mdx
+++ b/src/posts/projects/project-390-confidence.mdx
@@ -3,7 +3,7 @@ slug: confidence
 link: /projects/confidence/
 category: "projects"
 title: confidence
-description: 100 балльный репетитор
+description: confidence
 publicData: Nov 2020
 pagesCount: 2
 siteLink: https://demo.gromov.digital/confidenceuicms/
