--- a/src/posts/projects/project-40-admiral-club.mdx
+++ b/src/posts/projects/project-40-admiral-club.mdx
@@ -3,7 +3,7 @@ slug: admiral-club
 link: /projects/admiral-club/
 category: "projects"
 title: Admiral Club
-description: 100 балльный репетитор
+description: Admiral Club
 publicData: Sep 2022
 pagesCount: 13
 siteLink: https://demo.gromov.digital/admiral/
