--- a/src/posts/projects/project-400-euchet.mdx
+++ b/src/posts/projects/project-400-euchet.mdx
@@ -3,7 +3,7 @@ slug: euchet
 link: /projects/euchet/
 category: "projects"
 title: Euchet
-description: 100 балльный репетитор
+description: Euchet
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/94523611/euchet
