--- a/src/posts/projects/project-410-danfoss.mdx
+++ b/src/posts/projects/project-410-danfoss.mdx
@@ -3,7 +3,7 @@ slug: danfoss
 link: /projects/danfoss/
 category: "projects"
 title: Danfoss
-description: 100 балльный репетитор
+description: Danfoss
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/82263817/verstka-lendinga-Danfoss-dlja-sajta-akvahit
