--- a/src/posts/projects/project-420-pulsar.mdx
+++ b/src/posts/projects/project-420-pulsar.mdx
@@ -3,7 +3,7 @@ slug: pulsar
 link: /projects/pulsar/
 category: "projects"
 title: Pulsar
-description: 100 балльный репетитор
+description: Pulsar
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69706579/verstkaprototiplendinga-dlja-sajta-akavhit
