--- a/src/posts/projects/project-430-evakuator.mdx
+++ b/src/posts/projects/project-430-evakuator.mdx
@@ -3,7 +3,7 @@ slug: evakuator
 link: /projects/evakuator/
 category: "projects"
 title: Evakuator
-description: 100 балльный репетитор
+description: Evakuator
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69706125/sozdanie-sajta-pod-kljuch-evakuatory24
