--- a/src/posts/projects/project-460-bookkeeping.mdx
+++ b/src/posts/projects/project-460-bookkeeping.mdx
@@ -3,7 +3,7 @@ slug: bookkeeping
 link: /projects/bookkeeping/
 category: "projects"
 title: Bookkeeping
-description: 100 балльный репетитор
+description: Bookkeeping
 publicData: Aug 2019
 pagesCount: 8
 siteLink: https://i.gromov.digital/
