--- a/src/posts/projects/project-470-moc-ikt.mdx
+++ b/src/posts/projects/project-470-moc-ikt.mdx
@@ -3,7 +3,7 @@ slug: moc-ikt
 link: /projects/moc-ikt/
 category: "projects"
 title: ГКУ МОЦ ИКТ
-description: 100 балльный репетитор
+description: ГКУ МОЦ ИКТ
 publicData: Jan 2019
 pagesCount: 1
 siteLink: https://i.gromov.digital/
