--- a/src/posts/projects/project-50-monte-ebay.mdx
+++ b/src/posts/projects/project-50-monte-ebay.mdx
@@ -3,7 +3,7 @@ slug: monte-ebay
 link: /projects/monte-ebay/
 category: "projects"
 title: Monte Ebay
-description: 100 балльный репетитор
+description: Monte Ebay
 publicData: Jan 2022
 pagesCount: 2
 siteLink: https://demo.gromov.digital/monte-ebay/
