--- a/src/posts/projects/project-500-protector-shop.mdx
+++ b/src/posts/projects/project-500-protector-shop.mdx
@@ -3,7 +3,7 @@ slug: protector-shop
 link: /projects/protector-shop/
 category: "projects"
 title: Protector Shop
-description: 100 балльный репетитор
+description: Protector Shop
 publicData: Mart 2016
 pagesCount: 1
 siteLink: https://demo.gromov.digital/protector-shop/
