--- a/src/posts/projects/project-70-acpgame.mdx
+++ b/src/posts/projects/project-70-acpgame.mdx
@@ -3,7 +3,7 @@ slug: acpgame
 link: /projects/acpgame/
 category: "projects"
 title: ACPGAME
-description: 100 балльный репетитор
+description: ACPGAME
 publicData: Dec 2020
 pagesCount: 10
 siteLink: https://demo.gromov.digital/acpgame/
