--- a/src/posts/projects/project-80-panda.mdx
+++ b/src/posts/projects/project-80-panda.mdx
@@ -3,7 +3,7 @@ slug: panda
 link: /projects/panda/
 category: "projects"
 title: Panda
-description: 100 балльный репетитор
+description: Panda
 publicData: Nov 2020
 pagesCount: 7
 siteLink: https://demo.gromov.digital/panda/
