--- a/src/posts/projects/project-90-holybasil.mdx
+++ b/src/posts/projects/project-90-holybasil.mdx
@@ -3,7 +3,7 @@ slug: holybasil
 link: /projects/holybasil/
 category: "projects"
 title: Holybasil
-description: 100 балльный репетитор
+description: Holybasil
 publicData: Jan 2021
 pagesCount: 3
 siteLink: https://demo.gromov.digital/holybasil/
