--- a/src/posts/projects/project-100-pichshop.mdx
+++ b/src/posts/projects/project-100-pichshop.mdx
@@ -3,7 +3,7 @@ slug: pichshop
 link: /projects/pichshop/
 category: "projects"
 title: Pichshop
-description: 100 балльный репетитор
+description: Pichshop
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161894123/Pichshop-project
