--- a/src/posts/projects/project-220-gradi.mdx
+++ b/src/posts/projects/project-220-gradi.mdx
@@ -3,7 +3,7 @@ slug: gardi
 link: /projects/gardi/
 category: "projects"
 title: Gradi
-description: 100 балльный репетитор
+description: Gradi
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161602003/Gardi-Project
