--- a/src/posts/projects/project-320-medical.mdx
+++ b/src/posts/projects/project-320-medical.mdx
@@ -3,7 +3,7 @@ slug: medical
 link: /projects/medical/
 category: "projects"
 title: Medical
-description: 100 балльный репетитор
+description: Medical
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/medical/
