--- a/src/posts/projects/project-330-decoreto.mdx
+++ b/src/posts/projects/project-330-decoreto.mdx
@@ -3,7 +3,7 @@ slug: decoreto
 link: /projects/decoreto/
 category: "projects"
 title: Decoreto
-description: 100 балльный репетитор
+description: Decoreto
 publicData: Aug 2019
 pagesCount: 11
 siteLink: https://www.behance.net/gallery/94520401/Decoreto
