--- a/src/posts/projects/project-360-akvahit.mdx
+++ b/src/posts/projects/project-360-akvahit.mdx
@@ -3,7 +3,7 @@ slug: akvahit
 link: /projects/akvahit/
 category: "projects"
 title: Akvahit
-description: 100 балльный репетитор
+description: Akvahit
 publicData: May 2017
 pagesCount: 12
 siteLink: https://www.behance.net/gallery/82263873/verstka-glavnoj-stranicy-sajta-akvahit-redizajn
