--- a/src/posts/projects/project-440-obed-ru.mdx
+++ b/src/posts/projects/project-440-obed-ru.mdx
@@ -3,7 +3,7 @@ slug: obed-ru
 link: /projects/obed-ru/
 category: "projects"
 title: Obed-ru
-description: 100 балльный репетитор
+description: Obed-ru
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69704945/verstka-stranicy-s-akciej-dlja-Obedru
