--- a/src/posts/projects/project-450-webclim.mdx
+++ b/src/posts/projects/project-450-webclim.mdx
@@ -3,7 +3,7 @@ slug: webclim
 link: /projects/webclim/
 category: "projects"
 title: Webclim
-description: 100 балльный репетитор
+description: Webclim
 publicData: Sep 2017
 pagesCount: 2
 siteLink: https://www.behance.net/gallery/95769551/webclim
