Добавил технологии в проекты

--- a/src/posts/projects/project-01-tst.mdx
+++ b/src/posts/projects/project-01-tst.mdx
@@ -3,7 +3,7 @@ slug: tst
 link: /projects/tst/
 category: "projects"
 title: Проект Юлии Железняк
-description: 100 балльный репетитор
+description: Проект Юлии Железняк
 task: Разработка сайта личный бренд под ключ
 publicData: Oct 2025
 pagesCount: 1
